--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   },
   "homepage": "https://github.com/zabo-api/zabo-sdk-react-native#readme",
   "dependencies": {
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
+    "stream": "0.0.2",
     "zabo-sdk-js": "^1.2.0"
   },
   "peerDependencies": {
