--- a/package.json
+++ b/package.json
@@ -33,11 +33,8 @@
   "dependencies": {
     "buffer": "^6.0.3",
     "events": "^3.3.0",
+    "react-native-inappbrowser-reborn": ">= 3.5.1",
     "stream": "0.0.2",
     "zabo-sdk-js": "^1.3.0"
-  },
-  "peerDependencies": {
-    "react-native": ">= 0.62.0",
-    "react-native-inappbrowser-reborn": ">= 3.5.1"
   }
 }
