--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zabo-sdk-react-native",
   "version": "0.0.1",
   "description": "Zabo SDK for React Native",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -35,9 +35,5 @@
     "events": "^3.3.0",
     "stream": "0.0.2",
     "zabo-sdk-js": "^1.3.0"
-  },
-    "peerDependencies": {
-    "react-native": ">= 0.62.0",
-    "react-native-inappbrowser-reborn": ">= 3.5.1"
   }
 }
