--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -213,6 +213,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation project(':zabosdkreactnative')
 }
 
 // Run this once to be able to run the application with BUCK
