--- a/example/package.json
+++ b/example/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "16.11.0",
-    "react-native": "0.62.2",
-    "react-native-inappbrowser-reborn": "^3.5.1"
+    "react-native": "0.62.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
