--- a/example2/android/app/build.gradle
+++ b/example2/android/app/build.gradle
@@ -207,6 +207,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation project(':zabosdkreactnative')
 }
 
 // Run this once to be able to run the application with BUCK
