--- a/example2/android/settings.gradle
+++ b/example2/android/settings.gradle
@@ -1,3 +1,6 @@
 rootProject.name = 'example2'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
+
+include ':zabosdkreactnative'
+project(':zabosdkreactnative').projectDir = new File(rootProject.projectDir, '../../android')
