--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -46,6 +46,7 @@ end
 
 target 'example' do
   # Pods for example
+  pod 'RNInAppBrowser', :path => '../../RNInAppBrowser.podspec'
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
@@ -88,10 +89,10 @@ target 'example' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  add_flipper_pods!
-  post_install do |installer|
-    flipper_post_install(installer)
-  end
+  # add_flipper_pods!
+  # post_install do |installer|
+  #   flipper_post_install(installer)
+  # end
 end
 
 target 'example-tvOS' do
