--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "api"
   ],
   "author": "Zabo",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/zabo-api/zabo-sdk-react-native/issues"
   },
