--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zabo-sdk-react-native",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.0",
   "description": "Zabo SDK for React Native",
   "main": "src/index.js",
   "scripts": {
